# paper_indexer

./: CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml
paper_indexer/: embedder.py  index.py  models.py  query.py  utils.py
paper_indexer/fetchers/: arxiv.py  biorxiv.py  chemrxiv.py
tests/: test_arxiv_fetcher.py  test_biorxiv_fetcher.py  test_chemrxiv_fetcher.py
