[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-indexer"
version = "0.0.1"
description = "ArXiv papers indexer"
readme = "README.md"
authors = [
    {name = "Ilya Gusev", email = "phoenixilya@gmail.com"}
]
requires-python = ">=3.12,<=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "adapters>=1.2.0",
    "fire>=0.7.1",
    "httpx>=0.27.0",
    "kagglehub[polars-datasets]>=0.3.13",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "transformers>=4.51.3",
    "types-tqdm>=4.67.0.20250809",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "mypy==1.16.0",
    "flake8==7.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "isort>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/IlyaGusev/paper_indexer"

[[tool.mypy.overrides]]
module = "*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.setuptools.packages.find]
where = ["."]
include = ["paper_indexer*"]

[tool.setuptools.package-data]
"academia_mcp" = ["py.typed"]
"academia_mcp.tools" = ["py.typed"]

[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"
